[package]
name = "ulg-rs"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
mint = "0.5.4"
rand = "0.7.2"

[profile.dev]
opt-level=1